CR Domain Diagram ORM creation

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 ~$CODE Presents - From Requirements to Code with AI - Part 1.pptx
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
